[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/MainMenu/MissionStatus.gd" type="Script" id=1]
[ext_resource path="res://UI/three.png" type="Texture" id=2]
[ext_resource path="res://UI/two.png" type="Texture" id=3]
[ext_resource path="res://UI/one.png" type="Texture" id=4]
[ext_resource path="res://UI/GO.png" type="Texture" id=5]
[ext_resource path="res://UI/GateOpen.png" type="Texture" id=6]
[ext_resource path="res://UI/Mission Won.png" type="Texture" id=7]
[ext_resource path="res://UI/NextMission.png" type="Texture" id=8]
[ext_resource path="res://UI/Exit.png" type="Texture" id=9]
[ext_resource path="res://UI/Mission Lost.png" type="Texture" id=10]
[ext_resource path="res://UI/TryAgain.png" type="Texture" id=11]

[node name="MissionStatus" type="Control" index="0" groups=[
"MStatus",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
next_scene = null
this_scene = null
menu_scene = null

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="text3" type="TextureRect" parent="CenterContainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -112.0
margin_right = 1024.0
margin_bottom = 912.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="text2" type="TextureRect" parent="CenterContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -112.0
margin_right = 1024.0
margin_bottom = 912.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[node name="text1" type="TextureRect" parent="CenterContainer" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -112.0
margin_right = 1024.0
margin_bottom = 912.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="goText" type="TextureRect" parent="CenterContainer" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -112.0
margin_right = 1024.0
margin_bottom = 912.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0

[node name="gateText" type="TextureRect" parent="CenterContainer" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_top = 144.0
margin_right = 768.0
margin_bottom = 656.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="MissionComplete" type="MarginContainer" parent="." index="1"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CenterContainer" type="CenterContainer" parent="MissionComplete" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1032.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="TextureRect" type="TextureRect" parent="MissionComplete/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 1024.0
rect_min_size = Vector2( 1024, 1024 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MissionComplete/CenterContainer/TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 768.0
margin_right = 1026.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 150
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "custom_constants" ]

[node name="Next" type="TextureButton" parent="MissionComplete/CenterContainer/TextureRect/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
expand = true
_sections_unfolded = [ "Rect", "Textures", "Visibility" ]

[node name="Exit" type="TextureButton" parent="MissionComplete/CenterContainer/TextureRect/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 406.0
margin_right = 662.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
expand = true
_sections_unfolded = [ "Rect", "Textures" ]

[node name="MissionFailed" type="MarginContainer" parent="." index="2"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="CenterContainer" type="CenterContainer" parent="MissionFailed" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1032.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="TextureRect" type="TextureRect" parent="MissionFailed/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 1024.0
rect_min_size = Vector2( 1024, 1024 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 10 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="HBoxContainer" type="HBoxContainer" parent="MissionFailed/CenterContainer/TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 768.0
margin_right = 1026.0
margin_bottom = 1024.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 150
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "custom_constants" ]

[node name="TryAgain" type="TextureButton" parent="MissionFailed/CenterContainer/TextureRect/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
expand = true
_sections_unfolded = [ "Rect", "Textures" ]

[node name="ExitF" type="TextureButton" parent="MissionFailed/CenterContainer/TextureRect/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 406.0
margin_right = 662.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
expand = true
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="pressed" from="MissionComplete/CenterContainer/TextureRect/HBoxContainer/Next" to="." method="_on_Next_pressed"]

[connection signal="pressed" from="MissionComplete/CenterContainer/TextureRect/HBoxContainer/Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="MissionFailed/CenterContainer/TextureRect/HBoxContainer/TryAgain" to="." method="_on_TryAgain_pressed"]

[connection signal="pressed" from="MissionFailed/CenterContainer/TextureRect/HBoxContainer/ExitF" to="." method="_on_ExitF_pressed"]


